--- a/intro.ipynb
+++ b/intro.ipynb
@@ -1347,6 +1347,29 @@
     "- Elements can also have other `attributes` such as `class`, `id`, `href`, `style`, `src`\n",
     "    - In this case, there is a single attribute `class` which is equal to `\"page_inner\"`\n",
     "\n",
+    "Here is a reference for all the attributes and what they mean/do\n",
+    "1. id: Provides a unique identifier for an element within a document. It must be unique within the document.\n",
+    "\n",
+    "2. class: Specifies one or more CSS class names to associate with an element. Multiple classes can be assigned by separating them with spaces.\n",
+    "\n",
+    "3. style: Defines inline CSS styles for an element. It allows you to apply specific styling rules directly to the element.\n",
+    "\n",
+    "4. src: Specifies the source URL for elements like images (`<img>`) or scripts (`<script>`).\n",
+    "\n",
+    "5. href: Specifies the target URL for hyperlinks (`<a>` tags) and defines the destination of the link.\n",
+    "\n",
+    "6. alt: Provides alternative text for elements like images. It is displayed when the image cannot be loaded or for accessibility purposes.\n",
+    "\n",
+    "7. width and height: Specifies the width and height dimensions of elements like images, tables, or embedded content.\n",
+    "\n",
+    "8. disabled: Disables an input element (`<input>`, `<button>`, etc.) so that it cannot be interacted with or used.\n",
+    "\n",
+    "9. selected: Marks an option within a `<select>` element as the default or pre-selected option.\n",
+    "\n",
+    "10. placeholder: Provides a hint or example text to be displayed in an input field before a user enters a value.\n",
+    "\n",
+    "11. data-*: Allows the addition of custom data attributes to elements. These attributes are prefixed with \"data-\" and can store arbitrary data.\n",
+    "\n",
     "### Using The Soup\n",
     "\n",
     "Beuatiful soup provides a simple way of navigating this mess they call soup. Your new friends are the `find()` and `find_all()` methods.\n",
@@ -1569,12 +1592,6 @@
     "\n",
     "4. ***Dealing with IP blocking and proxy IPs***: Websites may employ IP blocking or rate limiting techniques to prevent scraping. To overcome these measures, you can use proxy IPs. Proxies act as intermediaries between your scraping script and the target website, allowing you to send requests from different IP addresses and avoid being detected or blocked. Proxy rotation and IP rotation techniques can further enhance the effectiveness. We will cover this later as well. In addition, it is usually advised to space out the timing of your requests so that you do not overwhelm the server, as this can also give yourself away and get your IP Banned."
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
